[package]
name = "nova_matmul"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
ff = "0.13"
nova-snark = { git = "https://github.com/microsoft/Nova", package = "nova-snark", branch = "main" }
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
flate2 = "1.1.2"
