[package]
name = "plonky2_recursive_matmul"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2", branch = "main" }
log = "0.4.14"
rand = "0.8.5"
bincode = "1.3"
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }